--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.0.3",
     "@astrojs/tailwind": "^5.1.4",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "astro": "^5.1.1",
