--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@astrojs/tailwind": "^6.0.2",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "astro": "^5.1.1",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-preset-minify": "^7.0.1",
+    "rehype-slug": "^6.0.0",
+    "remark-breaks": "^4.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
