--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@astrojs/tailwind": "^6.0.2",
     "@flaticon/flaticon-uicons": "^3.3.1",
     "astro": "^5.7.13",
+    "astro-icon": "^1.1.5",
     "json": "^11.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-preset-minify": "^7.0.1",
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
     "tailwindcss": "^3.4.17"
+  },
+  "devDependencies": {
+    "@iconify-json/ion": "^1.2.3",
+    "@iconify-json/simple-icons": "^1.2.35"
   }
 }
