--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@iconify-json/ion": "^1.2.3",
-    "@iconify-json/simple-icons": "^1.2.35"
+    "@iconify-json/simple-icons": "^1.2.35",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
