--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.6",
-    "@astrojs/tailwind": "^6.0.2",
     "@flaticon/flaticon-uicons": "^3.3.1",
-    "astro": "^5.7.13",
+    "@tailwindcss/vite": "^4.1.12",
+    "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
     "json": "^11.0.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-preset-minify": "^7.0.1",
     "rehype-slug": "^6.0.0",
     "remark-breaks": "^4.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@iconify-json/ion": "^1.2.3",
